result/namespaces/err_9.xml.err
./test/namespaces/err_9.xml:2: error: Namespaced Attribute err in 'http://example.com/' redefined
     a:err="1" b:err="2"/>
                        ^
